# speech-annotationpro-plugin

./: .gitignore  CMakeLists.txt  README.md  index.md
include/: exc.h  g2p.h  kaldi.h  lex.h  signaling.h
include/kaldi/base/: version.h
include/kaldi/itf/: CMakeLists.txt
phonetisaurus/: util.cc
phonetisaurus/include/: PhonetisaurusRex.h  PhonetisaurusScript.h
src/: g2p.cpp  kaldi.cpp  lex.cpp  main.cpp  signaling.cpp
windows/: CMakeLists.txt  Dockerfile  build.bat  compile.bat
